--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.3.12",
     "classnames": "^2.2.6",
-    "graphql": "^15.5.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scroll": "^1.8.2"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
