NPM name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@liveareamb/components-tier1",
+  "name": "mbtest-components-tier1",
   "version": "1.0.0",
   "description": "Description - tier1",
   "main": "esm.js",
